--- a/0203_0207_HtmlCss.md
+++ b/0203_0207_HtmlCss.md
@@ -8,7 +8,7 @@
 + **Hyper Text** : 하이퍼링크를 클릭을 통해 문서 간 이동이 가능한 Text
 + **Markup Language** : 태그 등을 이용해 문서나 데이터 구조를 명시하는 언어 (HTML, Markdown 등) 
   + markdown : #, ##, ###, +, 1. 등
-  + HTML :  \<head> \</head> ,  \<body>, \<footer> <h1> 등
+  + HTML :  \<head> \</head> ,  \<body>, \<footer> \<h1> 등
 
 
 ### [1] 웹표준
