--- a/0203_0207_HtmlCss.md
+++ b/0203_0207_HtmlCss.md
@@ -347,7 +347,7 @@
 + label의 for과 요소의 id를 일치시키면, 해당 label의 text 클릭시, 요소를 선택함
 + 
 ```html
-<label for="id> text </label>
+<label for="id"> text </label>
 <input id="id" type=text name="name" placeholder="입력해주세요">
 
 ```
@@ -359,7 +359,10 @@ placeholder
 
 
 
+### [7] Select [문서](https://developer.mozilla.org/ko/docs/Web/HTML/Element/select)
 
++ 선택지 만들기
++ 
 
 
 
