--- a/0214_알고리즘.md
+++ b/0214_알고리즘.md
@@ -189,3 +189,249 @@ print(path)
 
 ## 2. 순열
 
+
+
+
+
+
+
+# 트리
+
+## 1. 기본트리
+
+### [1] 성질
+
++ 간선의 수 = 정점의 수 - 1
+
+
+
+
+
+## 2. 이진트리
+
+### [1] 종류
+
+#### (1) 포화이진트리 / 완전이진트리
+
++ 부모 node의 숫자 < 자식 node의 숫자
++ 1 번이 root
+
+#### (2) 그외
+
++ 포화이진트리의 2가지 성립 x
+
+### [2] 성질
+
++ 부모 index = 자식 index //2
++ 좌측 자식 index = 부모 index * 2 
++ 우측 자식 index = 부모 index*2 +1
+
+
+
+### [3] 순회방법
+
+
+
+
+
+### [4] 표현(저장)
+
+#### (1) 배열 (성질 이용)
+
+
+
++ 단점
+  + 편향 이진 트리의 경우, 사용하지 않는 배열의 원소에 대한 메모리 낭비
+  + 트리의 중간에 새로운 노드를 삽입하거나, 기존의 노드를 삭제할 경우, 배열의 크기 변경 어려워 비효율적
+
++ 구현
+
+  ```python
+  # 0. 트리 저장방법
+  
+  
+  ```
+
+  
+
+
+
+#### (2) 부모 노드 숫자를 index로 하는 배열 2개에 저장
+
++ 포화이진트리가 아닌 경우, 저장 공간을 아낄 수 있음
+
+  | node index        | 0    | 1    | 2    | 3    | 4    | 5    | 6    | 7    | 8    |
+  | ----------------- | ---- | ---- | ---- | ---- | ---- | ---- | ---- | ---- | ---- |
+  | child1 ( arr[0] ) | 0    | 2    | 4    | 6    | 8    | 0    | 0    | 0    | 0    |
+  | child2 ( arr[1] ) | 0    | 3    | 5    | 7    | 0    | 0    | 0    | 0    | 0    |
+
+  이는 1 번이 root이고, 2,3을 자식으로가지고....반복하는 트리임
+  
+  ```python
+  # 0. 트리 저장방법
+  V = int(input()) # 정점 개수와 정점의 키값 일치하는 경우
+  arr = [[0]* (V+1) for _ in range(2)]
+  E = list(map(int,input().split()))
+  
+  for i in range(0, len(E),2):
+      parent, child = E[i], E[i+1]
+      # print(parent, child)
+      if arr[0][parent]:
+          arr[1][parent] = child
+      else:
+          arr[0][parent] = child
+          
+  ```
+  
+  
+
+
+
+#### (3) 자식 노드 숫자를 index로 하는 배열에 , 부모 노드 index 저장
+
++ 루트 찾기, 조상찾기에 활용 가능
+  + 포화 & 완전 이진트리 아닌 경우
+
+| node index | 0    | 1    | 2    | 3    | 4    | 5    | 6    | 7    | 8    |
+| ---------- | ---- | ---- | ---- | ---- | ---- | ---- | ---- | ---- | ---- |
+| parent     | 0    | 0    | 1    | 1    | 2    | 2    | 3    | 3    | 4    |
+
+```python
+# 0. 트리 저장방법
+parent = [0]*(V+1)
+for e in range(E):
+    read p, c
+    parent[c] = p
+	
+
+# 1. 루트찾는 코드
+root = 0 
+for i in range(1,V+1):
+    if parent[i] == 0:
+        root = i
+        break
+print(root)
+
+# 2. 조상찾는 코드
+# 5의 조상을 찾아봐라
+c = 5
+anc = []
+while parent[c] != 0 :
+    anc.append(parent[c])
+    c = parent[c]
+print(anc)
+```
+
+
+
+## 3. 그 외 이진트리
+
+### [1] 수식트리
+
+
+
+
+
+### [2] 이진탐색트리
+
+#### (1) 정의
+
++ 모든 노드는 유일한 값 가짐
++ 부모 노드의 왼쪽에 있는 노드들의 값은 부모보다 작음
++ 부모 노드의 오른쪽에 있는 노드들의 값은 부모보다 큼
+
+
+
+#### (2) 탐색
+
++ 부등호로 비교해가며 자식들 중 한 쪽 자식의 트리만 탐색하면 됨 
+
+
+
+
+
+
+
+### [3] 힙
+
++ 정의
+
+  + 완전 이진트리이고,
+
+  + 부모와 자식 간의 대소 관계가 항상 한쪽이 더 크거나, 더 작음
+
+    
+
++ 활용
+
+  + 우선순위 큐 구현
+
+  + 값 저장하고, 최소값, 최대값 가져오기 위한 자료구조
+
+    + root 의 값을 계속 가져온다고 생각하면 됨(root delete 이용해 힙정렬)
+
+      
+
++ 구현
+
+  + 마지막 요소 위치 알려주는 변수 필요
+
+  
+
+  
+
+#### (1) 최대힙
+
++ 정의
+
+  + 키값이 가장 큰 노드를 찾는 완전이진트리
+
+
+  + 부모 키값 > 자식 키값
+
+
+  + 루트 : 가장 큰 키값 노드
+
+    
+
+
+#### (2) 최소힙
+
++ 정의
+
+  + 키값이 가장 작은 노드를 찾는 완전이진트리
+
+
+  + 부모 키값 < 자식 키값
+
+
+  + 루트 : 가장 작은 키값 노드
+
+
+
+
+#### (3) 삽입연산
+
++ 가장 마지막 노드자리에 삽입 후, 부모와 자식 간에 대소비교하여, 위치 잘 찾아주기
+
+
+
+#### (4) 삭제연산
+
++ 항상 root의 요소를 반환하고, root 없애고, heap 다시 정렬하면 됨
++ 새로 root가 되는 요소
+  + 제일 마지막 요소 (나머지는 heap인 상태로 유지됨 + 완전이진트리 유지)
++ 교환 순서
+  + 최대힙 : root의 좌, 우 노드 중, 큰 것과 비교
+  + 최소힙 : root의 좌, 우 노드 중, 작은 것과 비교
+
+
+
+
+
+
+
+
+
+공통조상찾기
+
