--- a/0214_알고리즘.md
+++ b/0214_알고리즘.md
@@ -230,26 +230,70 @@ print(path)
 
 ### [3] 순회방법
 
+#### (1)
+
+#### (3) 후위순회
+
+```python
+# 이진트리의 경우
+
+# 1.특정 노드 아래의 노드 개수 세기
+## [1] global 변수 없이하는 법  
+### 부모 노드를 index로 하고, child node는 2개의 리스트에 저장되어있음
+def order(v):
+    if v == 0:  # 노드가 아니면 0 반환
+        return 0
+    return order(ch1[n]) + order(ch2[n]) + 1  # 자식이 없으면 1 반환
+```
+
 
 
 
 
 ### [4] 표현(저장)
 
++ 배열 저장의 단점
+
+  + 편향 이진 트리의 경우, 사용하지 않는 배열의 원소에 대한 메모리 낭비
+
+  + 트리의 중간에 새로운 노드를 삽입하거나, 기존의 노드를 삭제할 경우, 배열의 크기 변경 어려워 비효율적
+
+    
+
 #### (1) 배열 (성질 이용)
 
++ 정점의 최대 번호를 모두 포함할 수 있는 index를 가지는 1차원 배열을 생성
+
++ 완전이진트리에서 이용
+
+  ```python
+  # Index는 이진트리에서 위치 번호(1부터 시작)
+  tree = [0,'A','B',0,'D',0,0,0,0,0,0,0,0,0,0,0] # 좌편향트리
+  ```
 
 
-+ 단점
-  + 편향 이진 트리의 경우, 사용하지 않는 배열의 원소에 대한 메모리 낭비
-  + 트리의 중간에 새로운 노드를 삽입하거나, 기존의 노드를 삭제할 경우, 배열의 크기 변경 어려워 비효율적
+
++ 장점
+
+  + 완전이진트리의 경우, 부모와 자식간의 관계를 알고 있으므로, tree에 각 노드가 담고있는 value들을 그냥 쉽게 넣을 수 있다. (아래 참고)
+
+    ```python
+    # 완전 이진 트리의 in_order
+    def in_order(v):
+        if v <= N: # 최대 노드 개수 N으로 주어짐
+            in_order(v*2) #좌측자식
+            print(tree[v],end='')
+            in_order(v*2 + 1) # 우측자식
+    ```
+
+    
 
 + 구현
 
   ```python
   # 0. 트리 저장방법
-  
-  
+  tree = [0]*(노드개수+1) # root 가 1부터 시작
+  # 그 후 tree[node_idx] = node_value 로 저장해준다.
   ```
 
   
@@ -260,11 +304,14 @@ print(path)
 
 + 포화이진트리가 아닌 경우, 저장 공간을 아낄 수 있음
 
-  | node index        | 0    | 1    | 2    | 3    | 4    | 5    | 6    | 7    | 8    |
-  | ----------------- | ---- | ---- | ---- | ---- | ---- | ---- | ---- | ---- | ---- |
-  | child1 ( arr[0] ) | 0    | 2    | 4    | 6    | 8    | 0    | 0    | 0    | 0    |
-  | child2 ( arr[1] ) | 0    | 3    | 5    | 7    | 0    | 0    | 0    | 0    | 0    |
++ 부모 자식간에 임의 규칙으로 연결되었는 경우 이용
 
+  | node index          | 0    | 1    | 2    | 3    | 4    | 5    | 6    | 7    | 8    |
+  | ------------------- | ---- | ---- | ---- | ---- | ---- | ---- | ---- | ---- | ---- |
+  | child1 ( arr[0] )   | 0    | 2    | 4    | 6    | 8    | 0    | 0    | 0    | 0    |
+  | child2 ( arr[1] )   | 0    | 3    | 5    | 7    | 0    | 0    | 0    | 0    | 0    |
+  | node value (필요시) | 0    | 값1  | 값2  | 값3  | 값4  | 값5  | 값6  | 값7  | 값8  |
+  
   이는 1 번이 root이고, 2,3을 자식으로가지고....반복하는 트리임
   
   ```python
@@ -321,6 +368,21 @@ while parent[c] != 0 :
     c = parent[c]
 print(anc)
 ```
+
+
+
+
+
+
+
+#### (4) 2차원 배열 비대칭
+
++ 2차원 배열에서 각 행을 모든 노드로 볼 때, 열에 좌, 우 자식 노드를 1, 2 와 같이 표기
+  + 이렇게 하면, 자식 노드가 k 개 있어도 표현 가능
+
+
+
+
 
 
 
