--- a/0214_알고리즘.md
+++ b/0214_알고리즘.md
@@ -334,7 +334,7 @@ def order(v):
 
 
 
-#### (3) 자식 노드 숫자를 index로 하는 배열에 , 부모 노드 index 저장
+#### (3) 자식(부모) 노드를  index로 하는 배열에 , 부모(자식) 노드 저장
 
 + 루트 찾기, 조상찾기에 활용 가능
   + 포화 & 완전 이진트리 아닌 경우
@@ -678,7 +678,7 @@ f(0,3,5)
 # 2. 
 arr = [3,6,7,1,5,4]
 N = len(arr)
-for i in range(0,(1<<N)): # 1<<N : 부분집합 개수
+for i in range(0,(1<<N)): # 1<<N : 부분집합 개수로 이진수라고 생각
     for j in range(0,N):  # 원소의 수만큼 비트를 비교
         if i & (1<<j):    # i의 j 번째 비트가 1이면 j번째 원소 출력
             print(arr[j], end = ' ')
@@ -1629,6 +1629,674 @@ def promising(cr,cc):
 
 
 
+# 그래프 & 백트래킹
+
++ 참고 : 2차원 배열의 조합생성방법
+  + 1차원 배열에 2차원 배열 모두 저장한 후, 1차원 배열에서 조합 생성
+
+
+
+
+
+
+
+
+
+# 그래프(04/01)
+
++ 그래프는 아이템들과 이들 사이의 연결 관계를 표현
++ N:N 관계를 가지는 원소들 표현에 용이
+  + 선형 자료구조나 트리 자료구조로 표현하기 어려움
+
+
+
++ 문제 풀이 과정
+  + 문제 -> 그래프화 -> 탐색
++ 경로
+  + 단순 경로
+    + 경로 중 정점을 최대 1번만 지나는 것
+  + 사이클
+
+## 1. 그래프 유형
+
++ 무향 그래프
+
++ 유향 그래프 
+
+  + 무향 그래프, 유향 그래프는 데이터 저장할 때 딱 결정됨
+
+    
+
++ 가중치 그래프 (Weighted Graph)
+
++ 사이클 없는 방향 그래프 (DAG, Directed Acylic Graph)
+
++ 완전 그래프
+  + 정점들에 대해 모든 간선을 가진 그래프
+
+
+
+
+
+## 2. 그래프 표현
+
++ 간선의 정보를 저장하는 방식, 메모리나 성능을 고려해서 결정
+
++ 저장방법
+
+  ```python
+  V, E = map(int,input().split())  # 정점 개수 / 간선 개수
+  arr = list(map(int,input().split())) # 출발, 도착 정보 0 1 1 2 2 5 3 1 꼴
+  adjM = [[0]*V for _ in range(V)] # 무향그래프(인접행렬)
+  adjD = [[0]*V for _ in range(V)] # 유향그래프(인접행렬)
+  adjL = [[]* V for _ in range(V)] # 인접리스트
+  
+  for i in range(E):
+      v1, v2 = arr[i*2], arr[i*2+1]
+      # 1. 인접행렬(무향그래프)
+      adjM[v1][v2] = 1
+      adjM[v2][v1] = 1
+      # 1. 인접행렬(유향그래프)
+      adjD[v1][v2] = 1
+    
+      # 2. 인접리스트(무향그래프)
+      adjL[v1].append(v2)
+      adjL[v2].append(v1)
+      
+      # 2. 인접리스트(유향그래프)
+      adjL[v1].append(v2)
+  ```
+
+  
+
+### [1] 인접 행렬
+
++ V x V  크기의 2차원 배열 이용해서 간선 정보 저장
+
++ 배열의 배열 (포인터 배열)
+
+  ```python
+  V, E = map(int,input().split())  # 정점 개수 / 간선 개수
+  arr = list(map(int,input().split())) # 출발, 도착 정보 0 1 1 2 2 5 3 1 꼴
+  adjM = [[0]*V for _ in range(V)] # 무향그래프(인접행렬)
+  adjD = [[0]*V for _ in range(V)] # 유향그래프(인접행렬)
+  adjL = [[]* V for _ in range(V)] # 인접리스트
+  
+  for i in range(E):
+      v1, v2 = arr[i*2], arr[i*2+1]
+      # 배열(무향그래프)
+      adjM[v1][v2] = 1
+      adjM[v2][v1] = 1
+      # 배열(유향그래프)
+      adjD[v1][v2] = 1
+    
+      # 인접리스트(무향그래프)
+      adjL[v1].append(v2)
+      adjL[v2].append(v1)
+      
+      # 인접리스트(유향그래프)
+      adjL[v1].append(v2)
+      
+  ```
+
+  
+
+
+
+#### (1) 성질
+
++ 무향 그래프
+  + i번째 행의 합 = i 번째 열의 합 = V_i의 차수
++ 유향 그래프
+  + 행 i의 합 = V_i의 진출 차수
+  + 열 i의 합 = V_i의 진입 차수
+
+
+
+#### (2) 단점
+
++ 저장 공간을 많이 차지
+  + 노드 개수가 1000 개 넘어가면 **인접리스트** / **간선의 배열** 고려
+
+
+
+### [2] 인접리스트
+
++ 각 정점마다 해당 정점으로 나가는 간선의 정보를 저장
+
+  
+
+  
+
+#### (1) 장점
+
++ 인접행렬보다 메모리 조금 차지
+
+
+
+
+
+
+
+
+
+### [3] 간선의 배열
+
++ 간선(시작정점, 끝정점)을 배열에 연속적으로 저장
++ 노드의 수가 간선의 수보다 훨씬 많은 경우 활용
+
+
+
++ | 간선개수 | 시작 정점 | 도착 정점 |
+  | -------- | --------- | --------- |
+  | 1        | 0         | 1         |
+  | 2        | 0         | 2         |
+  | 3        | 5         | 1         |
+
+
+
+
+
+## 3. 그래프 순회
+
++ DFS, BFS
+
+### [1] DFS
+
++ 지나왔던 정점의 정보를 저장해야함
+
++ 가장 최근에 방문했던 정점을 저장하거나 활용하기 위해 STACK, 재귀 이용
+
+  
+
+
+
+#### (2) 구현방법
+
++ STACK
+
+  + stack에 넣기, visited 처리하기, 해당 노드에서 원하는 작업하기
+  + 위 3가지의 배치에 따라 여러 구현 가능
+    + stack 넣기 & visited 처리를 같은 위치에서 진행 -> pop 한 후 작업 진행
+    + visited 처리 & 원하는 작업을 같은 위치에서 진행 -> pop 한 후, not visited 경우에 visted 처리 & 작업수행
+  + 재귀로 구현 시, dfs() 호출하는 것이 stack에서 visitedFalse Node를 pop 하는 것과 같음
+
+  
+
++ 재귀 구현
+
++ ```PYTHON
+  # 1. 단순 dfs
+  def dfs(G,v):
+      visited[v] = True # 방문 설정
+      
+      for neighbor of v:
+          if visited[neighbor] == False:
+              dfs(G,neighbor)
+  
+              
+  # 2. 모든 경로 구하기 dfs
+   # 다른 경로 찾아서, 이전 단계로 return 한 후에 현재에게 돌아오는 것은 가능
+  def dfs(G,v): 
+  	visited[v] = True # 방문 설정
+      for neighbor of v:
+          if visited[neighbor] == False:
+              dfs(G,neighbor)
+          visited[neighbor] = False # 모든 경로 구하는 dfs 코드 
+          
+  # 3. 인접행렬 이용 단순 dfs
+  def dfs1(v):
+      visited[v] = 1
+      print(v,"에서 진행할 작업")
+      # v에 인접한 모든 노드에 대해
+      for j in range(V):
+          if adjM[v][j] == 1 and visited[j]==0: # 인접됐고, 방문x라면
+              dfs1(j)
+              
+              
+  # 4. 인접리스트 이용
+  def dfs2(v):
+      visited[v] = 1
+      print(v,"에서 작업")
+      for j in adjL[v]:
+          if visited[j]==0:
+              dfs2(j)
+  
+  ```
+
+
+
++ stack 구현
+
++ ```python
+  # 1. 내가 주로 쓰는 법
+  stack = [start]
+  while stack:
+      cur = stack[-1]
+      
+      for neighbor in adjL[cur]:
+          if visited[neighbor]==False:
+              stack.append(neighbor)
+              visited[neighbor] = True
+              break
+      else:
+          stack.pop()         
+  
+  # 2. stack / 인접리스트
+  # 이 방법의 단점은 같은 노드가 중복돼서 stack에 들어감 -> stack의 크기를 미리 정할 수 없음
+  stack = [start]
+  while stack:
+      cur = stack.pop()
+      if visited[cur] == False:
+          visited[cur] = True # 원하는 작업
+          print(여기서 원하는 작업 진행)
+          for neighbor in adjL[cur]:
+              if visited[neighbor] == False:
+                  stack.append(neighbor)
+              
+  # 3. stack/ 인접리스트 2
+  # stack에 넣기 & visited 같이 진행
+  stack = [start]
+  visited[start] = True
+  while stack:
+      cur = stack.pop()
+      print(여기서 원하는 작업 진행) # 원하는 작업
+      for neighbor in adjL[cur]:
+          if visited[neighbor]==False:
+              stack.append(neighbor)
+              visited[neighbor] = True
+              
+  ```
+
++ ```python
+  # 내가 주로 쓰는 법의 이동경로 print 방법
+  # version1, version2는 이동 순서 똑같은데, version1 은 중복되지 않게 방문된 곳 print함
+  # version2는 모든 이동 경로를 print해서 중복되서 나옴
+  #---------------------------------------------------version 1
+  stack.push(1)
+  # visited[1] = 1
+  
+  while not stack.is_empty():
+      top = stack.top.value
+      if visited[top] == 0:
+  
+          print(top, end=' ')
+      visited[top] = 1
+      # 경로 발견 즉시 이동
+      for i in range(1,N+1):
+          if adj[top][i] == 1 and visited[i] == 0 :
+              stack.push(i)
+              # visited[i] = 1
+              break
+  
+      else:
+          stack.pop()
+  
+  
+  #-----------------------------------version 2-------------------
+  stack = MyStack()
+  stack.push(1)
+  visited[1] = 1
+  
+  while not stack.is_empty():
+      top = stack.top.value
+      # if visited[top] == 0:
+      #
+      #     print(top, end=' ')
+      # visited[top] = 1
+      # 경로 발견 즉시 이동
+      for i in range(1,N+1):
+          if adj[top][i] == 1 and visited[i] == 0 :
+              stack.push(i)
+              visited[i] = 1
+              break
+  
+      else:
+          stack.pop()
+  ```
+
++ 
+
+
+
+### [2] BFS
+
+#### (1) 정의
+
++ 탐색 시작점의 인접한 정점들을 모두 차례로 방문한 후에, 방문했던 정점을 시작으로하여 다시 인접한 정점들을 차례로 방문
++ 인접한 정점들에 대해 탐색한 후, 차례로 너비우선탐색을 해야해서 큐를 활용
+
++ 속도가 가장 빠른 구현
+  + front, rear 로 위치 표시하고 ,enQueue 이용 (덱보다 빠름)
+
+
+
+
+
+#### (2) 구현
+
++ Queue 이용
+
++ ```python
+  # 1.
+  queue = [start]
+  visited[start] = 1
+  while queue:
+      cur = queue.pop(0)
+      for neighbor in adjL[cur]:
+          if visited[neighbor]==0:
+          	queue.append(neighbor)
+              visited[neighbor] = 1 + visited[cur] # start와의 거리를 알 수 있음
+  ```
+
+
+
+#### (3) 활용
+
++ 비상연락망
+  + 동시에 최대 몇 사람이 연락을 받겠는가?
+  + #1.의 구현 후, visited 배열 원소를 count 배열로 횟수 세면 됨
+
+
+
+# MST
+
+## 1. 서로소 집합
+
++ 교집합이 없음
++ 집합에 속한 하나의 특정 멤버(대표자)를 통해 각 집합들을 구분
+
+
+
+### [1] 활용
+
++ 부모-자식 관계만 주어질 때, 이게 몇 개의 트리인가 판단
+
+
+
+### [2] 상호 배타 집합 표현/연산
+
+#### (1) 트리 이용
+
++ 하나의 집합을 하나의 트리로 표현
+
++ 대표자
+
+  + 루트노드
+
++ 자식 노드가 부모 노드를 가리킴
+
+  
+
+  
+
+#### (2) 트리 표현/연산
+
++ 자식노드를 INDEX로 하는 배열로 트리표현
+
+  + 대표자가 몇 개인지 세면 몇 개 트리인지 알 수 있음
+
++ 연산 3가지
+
+  + Make-set(x) : x를 대표로하는 {x} 집합 생성
+  + Find_Set(x) : x를 포함하는 집합 찾기
+  + Union(x,y) :  x 집합의 대표 원소를, y집합의 대표 원소가 가리키게 함
+    + x,y집합 합치는 것
+    + `p[Find_set(x)] = Find_set(y)` 로 구현
+
++ 설명
+
+  | 연산                                                         | index    | 1    | 2    | 3    | 4    | 5    | 6    |
+  | ------------------------------------------------------------ | -------- | ---- | ---- | ---- | ---- | ---- | ---- |
+  | make_set(1)~(6)                                              | p        | 1    | 2    | 3    | 4    | 5    | 6    |
+  | union(1,3)                                                   | p        | 1    | 2    | 1    | 4    | 5    | 6    |
+  | union(2,3) <br />3의 대표원소 y 찾아가서,<br /> y의 대표원소를 2의 대표원소 x로 | p        | 2    | 2    | 1    | 4    | 5    | 6    |
+  | union(5,6)                                                   | p        | 2    | 2    | 1    | 4    | 5    | 5    |
+  | findset(6)                                                   | 5 return |      |      |      |      |      |      |
+
+  
+
++ 코드
+
++ ```PYTHON
+  # a = 1, b = 2 ,,로 생각
+  # 1. Make-Set(a) ~ Make-set(f) : set(tree) 초기화
+  [x,1,2,3,4,5,6] #: index와 같은 값으로 초기화 된 배열을 이용
+  
+  # 2. Union(c,d) : set 합치기 - 대표원소 c인 것과 d인 것 합치고, 대표원소는 c로
+  [x,1,2,3,3,5,6] # index가 자식이고, value가 부모(대표자 아님!)
+  
+  Union(e,f) -> [x,a,b,c,c,e,e]
+  Union(d,f) -> [x,a,b,c,c,c,e]  # f의 대표원소까지 쭉 찾아가서, 그 대표원소가 d의 대표원소를 가리키도록 (자기 자신을 가리킬 때까지 따라가야 그것이 대표)
+  
+  # 3. Find-set(d)
+  
+  
+  
+  ```
+
+  
+
+  
+
+## 2. MST (최소신장트리)
+
+### [1] 활용
+
++ 모든 정점을 연결하는 간선들의 가중치의 합이 최소가 되는 트리
++ 두 정점 사이의 최소 비용 경로 찾기
+
+
+
+### [2] 정의
+
++ Spanning Tree(신장트리)
+  + n 개의 정점으로 이루어진 무방향 그래프에서 n개의 정점과 n-1개의 간선으로 이루어진 트리
+
++ Minimum Spanning Tree(최소신장트리)
+  + 무방향 가중치 그래프에서 신장트리를 구성하는 간선들의 가중치의 합이 최소가 되는 신장트리
+
+
+
+### [3] 표현
+
++ 2차원 arrL\[r]\[c] =weight_{rc} 로 생성 (인접리스트활용)
++  
+
+### [4] 존재성 증명
+
++ 수학적 귀납법으로 증명가능
+
+  ```python
+  # k : 노드개수
+  1. k = 2 경우
+   - 아무 노드 선택해서 최소비용간선 선택하면 MST
+  
+  2. k =< n 경우 MST 일 때, k = n+1에서 MST임을 보이자
+  1) n+1개 node 중 아무것이나 1개를 없다고 생각하기
+  2) 나머지 n개 node들은 가정에 의해 MST_n 를 찾음(더 여러개의 tree로 쪼개어 질 수도 있음/그래도 아래과정은 같음)
+  3) 이제 1)에서 없다고 생각한 n+1 번 노드가 MST_n과 연결된 간선들을 모두 탐색
+  4) 만약 n+1 번 노드가 MST_n과 r 개 node가 연결되었다고 가정한다면
+   4-1) r개의 node를 m1, m2, ..., mr 로 표기 
+   4-2) m1, m2, ..., mr 과 연결된 기존 MST_n 의 노드들을 a1, a2, ... , ar (1~n사이값)로 표기
+   4-3) n+1과 m1, m2, ..., mr 중 최소 비용 간선 선택
+   4-4) 그럼 현재 n+1개 노드는 모두 연결되어 있음
+   4-5) 나머지 {m1, m2, ..., mr}-{최소비용 mi} 와 연결된 a1, a2, ..., ar 과의 간선값들 중 (n+1 <-> mi) < (mi <-> ai) 인 경우에 기존 연결을 끊고, n+1 번 노드와 연결 (기존 연결보다 n+1과의 연결 비용이 적다면)  : 즉 현재 MST에 연결된 간선 가중치보다 n+1 번과 연결된 간선 가중치가 더 좋으면 간선 바꾸기 ( 간선을 끊으면 2개의 트리로 분리되므로 다시 n+1과 이어주면 됨)
+  5) MST_(n+1) 완성
+  ```
+
+  
+
+### [4] MST 찾는 알고리즘
+
++ 정점이 많은 경우 어떤 방법이 좋을지 생각해봐야 함
++ 전체 그래프에서 **MST는 여러개 일 수 있음**
+  + 각 알고리즘은 여러 MST 중 하나를 만들게 됨
+
+
+#### (1) Prim 알고리즘
+
++ 의미
+  + MST에 포함된 정점에서 연결된 간선들 중에 하나씩 **Greedy**하게 선택하면서 MST를 만들어 가는 방식
+
++ 과정
+  + 시작 : 임의의 정점 v 선택해서 MST에 포함
+    + 반복 : **MST에 포함된 모든 정점에서 최소비용 간선의 정점 u(not in MST)선택**
+  + 모든 정점 선택될 때까지, 바로 위 과정 반복
++ point
+  + 서로소인 2개의 집합 정보를 유지(visted로 구분)
+    + MST에 선택된 정점들 표현
+    + MST에 선택되지 않은 정점들 표현
+  + 사이클 형성 방지해서 선택
+  + **이미 선택된 노드들 사이의 간선관계는 바뀔 수 없음!**
+    + 바뀔 수 있다고 가정하면 모순
+
+
+
++ 코드
+
+  ```PYTHON
+  V, E = map(int,input().split())
+  adjM = [[0]*(V+1) for _ in range(V+1)]
+  adjL = [[]*(V+1) for _ in range(V+1)]
+  for _ in range(E):
+      u, v, w = map(int,input().split())
+      adjM[u][v] = w
+      adjM[v][u] = w
+      
+      # 인접리스트 방법
+      adjL[u].append((v,w))
+      adjL[v].append((u,w))
+      
+  #-----------------------prim1 미완성 key 이용------------------
+  def prim1(r, V):
+      MST = [0]*(V+1) # MST 포함여부
+      key = [10000]*(V+1)
+      key[r] = 0     # 시작 정점의 key값
+      for _ in range(V):
+          u = 0
+          minV = 100000
+          # key 값 최소 찾기
+          for i in range(1,V+1):
+              if MST[i] == 0 and key[i] <minV:
+                  u = i
+                  minV = key[i]
+  
+                  
+  #--------------이걸로 이해하기-----------------------------------------
+  def prim2(r, V):
+      MST = [0]*(V+1) # MST 포함여부
+      MST[r] = 1    # 시작 노드 r
+      s = 0         # MST 가중치 합
+      for _ in range(V):
+          u = 0  # 내가 선택할 정점 번호를 초기화
+          minV = 100000
+          for i in range(1,V+1):
+              if MST[i] == 1: # 현재 연결된 것들에서 최소 가중치 간선 찾기
+                  for j in range(1,V+1):
+                      if 0 <adjM[i][j] < minV and MST[j]== 0: # 기존의 것과 연결안되어 있고, 최소비용간선이면 update
+                          u = j
+                          minV = adjM[i][j]
+          s += minV
+          MST[u] = 1
+  ```
+
+  
+
+
+
+#### (2) Kruskal 알고리즘
+
++ 정점 수 많을 때 prim 보다 효과적
+
++ 의미
+  + 최소값 간선을 하나씩 선택해서 MST를 찾는 알고리즘
++ 과정
+  + 모든 간선을 가중치에 따라 오름차순 정렬
+  + 가중치가 최소인 간선부터 선택하면서 트리를 증가
+    + 사이클이 존재하면 다음 순서 가중치 간선 선택(사이클 생기는 것은 고려 x)
+  + n-1개 간선이 선택될 때까지 바로 위 과정을 반복
++ point
+  + 사이클 존재 안하도록 잘 하기
+  + **disjoint set(상호배타 집합) 사용**
+  + Find_Set(a), Union_Set(a,b) 이용
+    + Find_Set(a) != Find_Set(b): 서로 다른 트리라면
+      + Union_set(a,b) 인듯?
+
+
+
+
+
+## 3. 최단경로
+
+### [1] 정의
+
++ 간선의 가중치가 있는 그래프에서 두 정점 사이의 경로들 중에 간선의 가중치의 합이 최소인 경로
+
+
+
+###  [2] 
+
+#### (1)다익스트라(diijkstra) 알고리즘
+
++ 시작 정점에서 거리가 최소인 정점을 선택해 나가면서, 최단 경로를 구하는 방식
+
++ 음의 가중치 허용 x
+
++ Greedy 기법사용한 것으로, MST prim 과 유사
+
+
++ 출발점만 있으면, 나머지 모든 정점을 지나는 최소값을 알 수도 있음
+
++ 과정
+
+
+  + 인접행렬(값이 비용)과 비용리스트(무한대로초기화), 선택된 정점집합 필요
+
+  + 아래는 a에서 f까지 가는 최소비용 구하는 과정
+
+  + ![다익스트라](0214_알고리즘.assets/다익스트라.PNG)
+
+  + | 선택된 노드들(아래)                           | a    | b     | c     | d     | e     | f     |
+    | --------------------------------------------- | ---- | ----- | ----- | ----- | ----- | ----- |
+    | a 기준으로 최소비용 (a 선택된 상태)           | 0    | **2** | 4     | inf   | inf   | inf   |
+    | a->b 상태에서 최소비용 (a,b 선택된 상태)      | 0    | 2     | **3** | 9     | inf   | inf   |
+    | a->b->c 상태에서 최소비용 (a,b,c 선택된 상태) | 0    | 2     | 3     | 9     | **6** | inf   |
+    | a->b->c->e 상태에서 최소비용                  | 0    | 2     | 3     | **8** | 6     | 11    |
+    | a->b->c->e->d  상태에서 최소비용              | 0    | 2     | 3     | 8     | 6     | **9** |
+
+    
+
+
+
+
+#### (2) 벨만-포드 (Bellman-Ford) 알고리즘
+
++ + 음의 가중치 허용
+
+
+### [3]
++ 플로이드- 워샬(Floyd-Warshall) 알고리즘
+  + DP에서 나옴
+
+
+
+
+
+# 백트래킹
+
+
+
+
+
+
+
+
+
+
+
+
+
 # 참고사항
 
 ## 1. SWEA
@@ -1636,3 +2304,31 @@ def promising(cr,cc):
 + 제한시간 1초문제 : C/C++ 기준 10억번 반복 (1억 반복에 10억연산의미)
   + 1억회 반복정도로 해야, 안전하게 다른 연산까지 가능
   + 12! = 4억7900만
+
+
+
+
+
+## 2. 일반사항
+
+### [1] Linked List / Array List
+
++ Linked List
+  + 장점은 삽입/삭제 많을 때 유리
+  + 크기 고정 x
+  + 다음 요소의 주소를 저장
+  + 
+
++ array list는 크기 고정되게 만드는 것
+  + 장점은 idx 접근이 빠름
+  + 요소 접근이 많을 때 유리
+
+
+
++ 전체 stack or queue의 크기를 어느정도 아는 경우
+  + 메모리를 좀 희생해서, 선형 stack or queue 만들어서, 여기서 idx로 접근하는 것이 빠름
+  + 즉 top이라는 변수가 어떤 idx를 가리키게 해서, 배열을 변경하는 것이 아니라 idx를 왔다갔다 하면서 top이 가리키는 idx에 값을 집어 넣기
+  + stack 구현할 때, node를 top으로 두지 않고, top의 위치를 top이 가리키게 하는 게 더 빠름
+  + **요약하면**
+    + stack이 arr로 구현되어 있을 때, pop,push 연산하면, arr 을 크기 맞춰서 새로 만든 후 기존의 arr을 복사해야함 -> 시간 오래걸림
+    + 따라서 stack의 maximum 크기를 알고 있다면, 그 크기만큼 arr 선언해둔 후, top 이라는 idx를 이용해 왔다갔다하며 idx 접근을 하도록 구현하는 것이 더 빠름
